cpa/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
  labels:
    app: cpa
    app.kubernetes.io/component: web
    app.kubernetes.io/instance: cpa
    app.kubernetes.io/name: cpa
    app.openshift.io/runtime: java
  name: cpa
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cpa
  template:
    metadata:
      labels:
        app: cpa
    spec:
      containers:
      - name: cpa
        imagePullPolicy: Always
        image: image-registry.openshift-image-registry.svc:5000/mok/cpa:bfb265fd03050c122cd4c6be21a745c66ee0a69b
        ports:
        - containerPort: 8381
          protocol: TCP
