cpa/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: cpa
  name: cpa
spec:
  ports:
  - name: 8381-tcp
    port: 8381
    protocol: TCP
    targetPort: 8381
  selector:
    app: cpa
  sessionAffinity: None
  type: ClusterIP
